--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "node": "^24.9.0",
     "npm": "^11.6.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
